# ==============================================
# pyproject.toml for packaging aegisgraph as a Python module
# Author: Daniel Ferreto
# Version: 1.1
# Date: 2025-03-27
# Description:
#     Secure, high-performance C++ graph processing module
#     exposed to Python using pybind11 and built via scikit-build-core.
# ==============================================

[build-system]
requires = [
  "scikit-build-core[pyproject]", 
  "pybind11"
]
build-backend = "scikit_build_core.build"

[project]
name = "aegisgraph"
version = "1.1"
description = "High-performance graph processing and random walk library in C++ with Python bindings"
authors = [
  { name = "Daniel Ferreto", email = "ldanielfch@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
readme = "README.md"
keywords = ["graph", "cpp", "pybind11", "network", "random walk", "high-performance"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Development Status :: 4 - Beta"
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.scikit-build]
minimum-version = "0.7"
build-dir = "build"
wheel.expand-macos-universal-tags = true

[project.urls]
"Homepage" = "https://github.com/TheRadDani/aegisgraph"
"Issues" = "https://github.com/TheRadDani/aegisgraph/issues"

[tool.scikit-build.cmake]
minimum-version = "3.16"
build-type = "Release"
args = ["-DPYBIND11_FINDPYTHON=ON"]

[tool.scikit-build.sdist]
include = ["bindings/*", "src/*", "include/*", "CMakeLists.txt"]